--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Hello React</title>
+  <title>Commune</title>
+  <link rel="icon" href="favicon.png" type="image/png" >
 </head>
 <body>
   <div id="react-root"></div>
