--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="favicon.png" type="image/png" >
 </head>
 <body>
-  <div id="react-root"></div>
+  <div id="root"></div>
   <script src="/bundle.js"></script>
 </body>
 </html>
