--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <title>Commune</title>
   <link rel="icon" href="favicon.png" type="image/png" >
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Eczar|Pacifico" rel="stylesheet">
 </head>
 <body>
   <div id="react-root"></div>
